--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/duanju/reading_note#readme",
   "devDependencies": {
     "commitizen": "^4.1.2",
-    "cz-conventional-changelog": "^3.2.0"
+    "cz-conventional-changelog": "^3.2.0",
+    "cz-emoji": "^1.2.1"
   },
   "config": {
     "commitizen": {
