revert: "build(git commit): add cz-emoji"
This reverts commit 4080cae4ea4c348eff7c194b507e08352d1dbc85.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "homepage": "https://github.com/duanju/reading_note#readme",
   "devDependencies": {
     "commitizen": "^4.1.2",
-    "cz-conventional-changelog": "^3.2.0",
-    "cz-emoji": "^1.2.1"
+    "cz-conventional-changelog": "^3.2.0"
   },
   "config": {
     "commitizen": {
